--- a/app/main.css
+++ b/app/main.css
@@ -614,6 +614,9 @@ body {
   .bottom-margin {
     margin-bottom: 50px;
   }
+  .top-margin {
+    margin-top: 50px;
+  }
 
   .user-message {
     align-self: flex-start;
